manifests/overlays/openshift-secure/patches/patch-capture-namespace-label.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pcap-capture
  labels:
    spcg.io/role: capture
