manifests/overlays/openshift-secure/patches/patch-frontend-landing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spcg-frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
