manifests/overlays/openshift-secure/patches/patch-ui-portal-control.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spcg-ui-portal
spec:
  template:
    spec:
      containers:
        - name: ui-portal
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: oauth-ca
              mountPath: /etc/oauth-ca
              readOnly: true
      volumes:
        - name: oauth-ca
          configMap:
            name: spcg-oauth-serving-ca
            optional: true
