manifests/overlays/openshift-secure/patches/delete-monolithic-routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spcg
  namespace: pcap-frontend
$patch: delete
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spcg-api
  namespace: pcap-frontend
$patch: delete
