manifests/overlays/openshift-secure/patches/delete-monolithic-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: pcap-frontend
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: pcap-frontend
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-portal-to-capture-engine
  namespace: pcap-frontend
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-ui-portal
  namespace: pcap-frontend
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-portal-to-neo4j
  namespace: pcap-frontend
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ui-portal-k8s-api-egress
  namespace: pcap-frontend
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-frontend-services
  namespace: pcap-frontend
$patch: delete
